# agentic-ai-sample-poc

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.yaml  streamlit_app.py
.github/workflows/: ci.yaml
src/: constants.py  exceptions.py  ingest.py  methods.py  models.py  responses.py  responses_old.py  types.py  utils.py  workflow.py
tests/: conftest.py  test_ingest.py  test_methods.py  test_responses.py  test_utils.py  test_workflow.py
