[project]
name = "agentic-ai-sample-poc"
version = "0.1.0"
description = "Agentic AI Sample Proof of Concept"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["ruff>=0.8.0", "pytest>=7.4.0", "pre-commit>=3.5.0"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ty.src]
include = ["src", "main.py"]
